Fix project-details sections
Remove the extra space between the spans.

--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,7 @@ p {
 
 @media only screen and (min-width: 700px) {
   .project-details {
-    grid-column: span 2;
+    grid-column: span 3;
   }
 }
 
